scripts/generator/tests/fixtures/dportsv3/invalid/semantic/missing-port.dops
target @main
mk set VAR "value"
